; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-its.c_vgic_mmio_uaccess_write_its_creadr.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-its.c_vgic_mmio_uaccess_write_its_creadr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }
%struct.vgic_its = type { i32, i64, i32, i64 }

@EBUSY = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm*, %struct.vgic_its*, i32, i32, i64)* @vgic_mmio_uaccess_write_its_creadr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vgic_mmio_uaccess_write_its_creadr(%struct.kvm* %0, %struct.vgic_its* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.kvm*, align 8
  %7 = alloca %struct.vgic_its*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.kvm* %0, %struct.kvm** %6, align 8
  store %struct.vgic_its* %1, %struct.vgic_its** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  store i32 0, i32* %12, align 4
  %13 = load %struct.vgic_its*, %struct.vgic_its** %7, align 8
  %14 = getelementptr inbounds %struct.vgic_its, %struct.vgic_its* %13, i32 0, i32 0
  %15 = call i32 @mutex_lock(i32* %14)
  %16 = load %struct.vgic_its*, %struct.vgic_its** %7, align 8
  %17 = getelementptr inbounds %struct.vgic_its, %struct.vgic_its* %16, i32 0, i32 3
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %5
  %21 = load i32, i32* @EBUSY, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %12, align 4
  br label %39

23:                                               ; preds = %5
  %24 = load i64, i64* %10, align 8
  %25 = call i64 @ITS_CMD_OFFSET(i64 %24)
  store i64 %25, i64* %11, align 8
  %26 = load i64, i64* %11, align 8
  %27 = load %struct.vgic_its*, %struct.vgic_its** %7, align 8
  %28 = getelementptr inbounds %struct.vgic_its, %struct.vgic_its* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 8
  %30 = call i64 @ITS_CMD_BUFFER_SIZE(i32 %29)
  %31 = icmp sge i64 %26, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %23
  %33 = load i32, i32* @EINVAL, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %12, align 4
  br label %39

35:                                               ; preds = %23
  %36 = load i64, i64* %11, align 8
  %37 = load %struct.vgic_its*, %struct.vgic_its** %7, align 8
  %38 = getelementptr inbounds %struct.vgic_its, %struct.vgic_its* %37, i32 0, i32 1
  store i64 %36, i64* %38, align 8
  br label %39

39:                                               ; preds = %35, %32, %20
  %40 = load %struct.vgic_its*, %struct.vgic_its** %7, align 8
  %41 = getelementptr inbounds %struct.vgic_its, %struct.vgic_its* %40, i32 0, i32 0
  %42 = call i32 @mutex_unlock(i32* %41)
  %43 = load i32, i32* %12, align 4
  ret i32 %43
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @ITS_CMD_OFFSET(i64) #1

declare dso_local i64 @ITS_CMD_BUFFER_SIZE(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
